adjust Hibernate OGM