@@ -14,16 +14,24 @@
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.10.1</version>
+                <version>3.12.1</version>
                 <configuration>
-                    <source>17</source>
-                    <target>17</target>
+                    <compilerArgs>
+                        <arg>--add-opens</arg>
+                        <arg>java.base/java.lang=ALL-UNNAMED</arg>
+                        <arg>--add-opens</arg>
+                        <arg>java.xml/jdk.xml.internal=ALL-UNNAMED</arg>
+                    </compilerArgs>
+                    <fork>true</fork>
                 </configuration>
             </plugin>
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.2</version>
+                <version>3.2.2</version>
                 <configuration>
+                    <testFailureIgnore>true</testFailureIgnore>
+                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+                    <argLine>--add-opens java.xml/jdk.xml.internal=ALL-UNNAMED</argLine> 
                     <includes>
                         <include>**/*.java</include>
                     </includes>
@@ -37,7 +45,7 @@
             <dependency>
                 <groupId>org.hibernate.ogm</groupId>
                 <artifactId>hibernate-ogm-bom</artifactId>
-                <version>4.2.0.Final</version>
+                <version>5.4.1.Final</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -48,7 +56,7 @@
         <!-- MongoDB dependencies -->
         <dependency>
             <groupId>org.hibernate.ogm</groupId>
-            <artifactId>hibernate-ogm-mongodb</artifactId>
+            <artifactId>hibernate-ogm-mongodb</artifactId> 
         </dependency>
         <!-- Neo4j dependencies -->
         <!--
@@ -57,9 +65,17 @@
             <artifactId>hibernate-ogm-neo4j</artifactId>
         </dependency>
         -->
+         
+        <!-- Runtime, com.sun.xml.bind module -->
         <dependency>
-            <groupId>org.jboss.jbossts</groupId>
-            <artifactId>jbossjta</artifactId>
+            <groupId>org.glassfish.jaxb</groupId>
+            <artifactId>jaxb-runtime</artifactId>
+            <version>2.3.2</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.jboss.narayana.jta</groupId>
+            <artifactId>narayana-jta</artifactId> 
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
